setup workspace using @1goal org namespace - migrate from planetscale to turso setup with drizzle - remove auth setup in nextjs app - disable github ci

--- a/.env.example
+++ b/.env.example
@@ -5,10 +5,8 @@
 # If you are cloning this repo, create a copy of this file named `.env` and populate it with your secrets.
 
 # The database URL is used to connect to your PlanetScale database.
-DB_HOST='aws.connect.psdb.cloud'
-DB_NAME='YOUR_DB_NAME'
-DB_USERNAME=''
-DB_PASSWORD='pscale_pw_'
+DATABASE_URL='YOUR_TURSO_DB_URL'
+DATABASE_AUTH_TOKEN='YOUR_TURSO_DB_AUTH_TOKEN'
 
 # @see https://next-auth.js.org/configuration/options#nextauth_url
 AUTH_URL='http://localhost:3000'
