--- a/apps/auth-proxy/package.json
+++ b/apps/auth-proxy/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@acme/auth-proxy",
+  "name": "@1goal/auth-proxy",
   "private": true,
   "type": "module",
   "scripts": {
@@ -14,10 +14,10 @@
     "@auth/core": "^0.20.0"
   },
   "devDependencies": {
-    "@acme/eslint-config": "workspace:^0.2.0",
-    "@acme/prettier-config": "workspace:^0.1.0",
-    "@acme/tailwind-config": "workspace:^0.1.0",
-    "@acme/tsconfig": "workspace:^0.1.0",
+    "@1goal/eslint-config": "workspace:^0.2.0",
+    "@1goal/prettier-config": "workspace:^0.1.0",
+    "@1goal/tailwind-config": "workspace:^0.1.0",
+    "@1goal/tsconfig": "workspace:^0.1.0",
     "eslint": "^8.56.0",
     "nitropack": "^2.8.1",
     "prettier": "^3.1.1",
@@ -26,8 +26,8 @@
   "eslintConfig": {
     "root": true,
     "extends": [
-      "@acme/eslint-config/base"
+      "@1goal/eslint-config/base"
     ]
   },
-  "prettier": "@acme/prettier-config"
+  "prettier": "@1goal/prettier-config"
 }
