--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -25,6 +25,7 @@
     "@trpc/client": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "framer-motion": "^10.18.0",
     "geist": "^1.2.0",
     "lucide-react": "^0.312.0",
     "next": "^14.0.4",
