--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -12,7 +12,9 @@
     "./theme": "./src/theme.tsx",
     "./toast": "./src/toast.tsx",
     "./progress": "./src/progress.tsx",
-    "./textarea": "./src/textarea.tsx"
+    "./textarea": "./src/textarea.tsx",
+    "./checkbox": "./src/checkbox.tsx",
+    "./radio-group": "./src/radio-group.tsx"
   },
   "license": "MIT",
   "scripts": {
@@ -24,14 +26,16 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "next-themes": "^0.2.1",
-    "react-hook-form": "^7.49.2",
+    "react-hook-form": "^7.49.3",
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7"
