--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -14,7 +14,8 @@
     "./progress": "./src/progress.tsx",
     "./textarea": "./src/textarea.tsx",
     "./checkbox": "./src/checkbox.tsx",
-    "./radio-group": "./src/radio-group.tsx"
+    "./radio-group": "./src/radio-group.tsx",
+    "./select": "./src/select.tsx"
   },
   "license": "MIT",
   "scripts": {
@@ -32,6 +33,7 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "next-themes": "^0.2.1",
