--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -18,6 +18,7 @@
     "@1goal/db": "workspace:^0.1.0",
     "@1goal/ui": "workspace:^0.1.0",
     "@1goal/validators": "workspace:^0.1.0",
+    "@react-hookz/web": "^24.0.2",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^5.17.7",
     "@tanstack/react-query-devtools": "^5.17.7",
@@ -32,6 +33,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "2.2.1",
+    "usehooks-ts": "^2.9.5",
     "zod": "^3.22.4"
   },
   "devDependencies": {
