store quest state

--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -28,6 +28,7 @@
     "@trpc/server": "next",
     "framer-motion": "^10.18.0",
     "geist": "^1.2.0",
+    "jotai": "^2.6.3",
     "lucide-react": "^0.312.0",
     "next": "^14.0.4",
     "react": "18.2.0",
