--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -35,6 +35,7 @@
     "react-dom": "18.2.0",
     "superjson": "2.2.1",
     "usehooks-ts": "^2.9.5",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
