- make all core pages mobile responsive - rename @1goal namespace to @peakquest - minor code fixes

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -3,7 +3,7 @@
   "extends": ["config:base"],
   "packageRules": [
     {
-      "matchPackagePatterns": ["^@1goal/"],
+      "matchPackagePatterns": ["^@peakquest/"],
       "enabled": false
     }
   ],
