--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@1goal/ui",
+  "name": "@peakquest/ui",
   "private": true,
   "version": "0.1.0",
   "type": "module",
@@ -17,7 +17,8 @@
     "./radio-group": "./src/radio-group.tsx",
     "./select": "./src/select.tsx",
     "./card": "./src/card.tsx",
-    "./tooltip": "./src/tooltip.tsx"
+    "./tooltip": "./src/tooltip.tsx",
+    "./scroll-area": "./src/scroll-area.tsx"
   },
   "license": "MIT",
   "scripts": {
@@ -35,21 +36,24 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "add": "^2.0.6",
     "class-variance-authority": "^0.7.0",
     "next-themes": "^0.2.1",
+    "pnpm": "^8.15.1",
     "react-hook-form": "^7.49.3",
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@1goal/eslint-config": "workspace:^0.2.0",
-    "@1goal/prettier-config": "workspace:^0.1.0",
-    "@1goal/tailwind-config": "workspace:^0.1.0",
-    "@1goal/tsconfig": "workspace:^0.1.0",
+    "@peakquest/eslint-config": "workspace:^0.2.0",
+    "@peakquest/prettier-config": "workspace:^0.1.0",
+    "@peakquest/tailwind-config": "workspace:^0.1.0",
+    "@peakquest/tsconfig": "workspace:^0.1.0",
     "eslint": "^8.56.0",
     "prettier": "^3.1.1",
     "tailwindcss": "^3.4.0",
@@ -61,9 +65,9 @@
   },
   "eslintConfig": {
     "extends": [
-      "@1goal/eslint-config/base",
-      "@1goal/eslint-config/react"
+      "@peakquest/eslint-config/base",
+      "@peakquest/eslint-config/react"
     ]
   },
-  "prettier": "@1goal/prettier-config"
+  "prettier": "@peakquest/prettier-config"
 }
