--- a/tooling/eslint/package.json
+++ b/tooling/eslint/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@1goal/eslint-config",
+  "name": "@peakquest/eslint-config",
   "version": "0.2.0",
   "private": true,
   "license": "MIT",
@@ -26,8 +26,8 @@
     "eslint-plugin-react-hooks": "^4.6.0"
   },
   "devDependencies": {
-    "@1goal/prettier-config": "workspace:^0.1.0",
-    "@1goal/tsconfig": "workspace:^0.1.0",
+    "@peakquest/prettier-config": "workspace:^0.1.0",
+    "@peakquest/tsconfig": "workspace:^0.1.0",
     "@types/eslint": "^8.56.0",
     "eslint": "^8.56.0",
     "prettier": "^3.1.1",
@@ -39,5 +39,5 @@
       "./base.js"
     ]
   },
-  "prettier": "@1goal/prettier-config"
+  "prettier": "@peakquest/prettier-config"
 }
