--- a/tooling/prettier/package.json
+++ b/tooling/prettier/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@1goal/prettier-config",
+  "name": "@peakquest/prettier-config",
   "private": true,
   "version": "0.1.0",
   "type": "module",
@@ -17,8 +17,8 @@
     "prettier-plugin-tailwindcss": "^0.5.10"
   },
   "devDependencies": {
-    "@1goal/tsconfig": "workspace:^0.1.0",
+    "@peakquest/tsconfig": "workspace:^0.1.0",
     "typescript": "^5.3.3"
   },
-  "prettier": "@1goal/prettier-config"
+  "prettier": "@peakquest/prettier-config"
 }
