--- a/tooling/tailwind/package.json
+++ b/tooling/tailwind/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@1goal/tailwind-config",
+  "name": "@peakquest/tailwind-config",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -20,9 +20,9 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@1goal/eslint-config": "workspace:^0.2.0",
-    "@1goal/prettier-config": "workspace:^0.1.0",
-    "@1goal/tsconfig": "workspace:^0.1.0",
+    "@peakquest/eslint-config": "workspace:^0.2.0",
+    "@peakquest/prettier-config": "workspace:^0.1.0",
+    "@peakquest/tsconfig": "workspace:^0.1.0",
     "eslint": "^8.56.0",
     "prettier": "^3.1.1",
     "typescript": "^5.3.3"
@@ -30,8 +30,8 @@
   "eslintConfig": {
     "root": true,
     "extends": [
-      "@1goal/eslint-config/base"
+      "@peakquest/eslint-config/base"
     ]
   },
-  "prettier": "@1goal/prettier-config"
+  "prettier": "@peakquest/prettier-config"
 }
