--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@1goal/nextjs",
+  "name": "@peakquest/nextjs",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -11,13 +11,15 @@
     "lint": "dotenv -v SKIP_ENV_VALIDATION=1 next lint",
     "start": "pnpm with-env next start",
     "typecheck": "tsc --noEmit",
-    "with-env": "dotenv -e ../../.env --"
+    "with-env": "dotenv -e ../../.env --",
+    "dopper:sync-env": "doppler secrets download --no-file --format env > ../../.env.doppler"
   },
   "dependencies": {
-    "@1goal/api": "workspace:^0.1.0",
-    "@1goal/db": "workspace:^0.1.0",
-    "@1goal/ui": "workspace:^0.1.0",
-    "@1goal/validators": "workspace:^0.1.0",
+    "@peakquest/api": "workspace:^0.1.0",
+    "@peakquest/db": "workspace:^0.1.0",
+    "@peakquest/ui": "workspace:^0.1.0",
+    "@peakquest/validators": "workspace:^0.1.0",
+    "@nextui-org/react": "^2.2.9",
     "@react-hookz/web": "^24.0.2",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^5.17.7",
@@ -39,10 +41,10 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@1goal/eslint-config": "workspace:^0.2.0",
-    "@1goal/prettier-config": "workspace:^0.1.0",
-    "@1goal/tailwind-config": "workspace:^0.1.0",
-    "@1goal/tsconfig": "workspace:^0.1.0",
+    "@peakquest/eslint-config": "workspace:^0.2.0",
+    "@peakquest/prettier-config": "workspace:^0.1.0",
+    "@peakquest/tailwind-config": "workspace:^0.1.0",
+    "@peakquest/tsconfig": "workspace:^0.1.0",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
@@ -56,10 +58,10 @@
   "eslintConfig": {
     "root": true,
     "extends": [
-      "@1goal/eslint-config/base",
-      "@1goal/eslint-config/nextjs",
-      "@1goal/eslint-config/react"
+      "@peakquest/eslint-config/base",
+      "@peakquest/eslint-config/nextjs",
+      "@peakquest/eslint-config/react"
     ]
   },
-  "prettier": "@1goal/prettier-config"
+  "prettier": "@peakquest/prettier-config"
 }
