--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@1goal/db",
+  "name": "@peakquest/db",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -12,6 +12,7 @@
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint .",
     "generate": "drizzle-kit generate:sqlite --out ./migrations --breakpoints --schema=./src/schema/quest.ts --schema=./src/schema/auth.ts",
+    "push": "drizzle-kit push:sqlite",
     "migrate": "tsx migrate",
     "seed": "tsx seed",
     "studio": "drizzle-kit studio",
@@ -22,9 +23,9 @@
     "drizzle-orm": "^0.29.3"
   },
   "devDependencies": {
-    "@1goal/eslint-config": "workspace:^0.2.0",
-    "@1goal/prettier-config": "workspace:^0.1.0",
-    "@1goal/tsconfig": "workspace:^0.1.0",
+    "@peakquest/eslint-config": "workspace:^0.2.0",
+    "@peakquest/prettier-config": "workspace:^0.1.0",
+    "@peakquest/tsconfig": "workspace:^0.1.0",
     "dotenv-cli": "^7.3.0",
     "drizzle-kit": "^0.20.10",
     "eslint": "^8.56.0",
@@ -35,8 +36,8 @@
   "eslintConfig": {
     "root": true,
     "extends": [
-      "@1goal/eslint-config/base"
+      "@peakquest/eslint-config/base"
     ]
   },
-  "prettier": "@1goal/prettier-config"
+  "prettier": "@peakquest/prettier-config"
 }
