--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -51,6 +51,7 @@
     "@types/uuid": "^9.0.8",
     "dotenv-cli": "^7.3.0",
     "eslint": "^8.56.0",
+    "openai": "^4.26.0",
     "prettier": "^3.1.1",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3"
