--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -15,11 +15,11 @@
     "dopper:sync-env": "doppler secrets download --no-file --format env > ../../.env.doppler"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.9",
     "@peakquest/api": "workspace:^0.1.0",
     "@peakquest/db": "workspace:^0.1.0",
     "@peakquest/ui": "workspace:^0.1.0",
     "@peakquest/validators": "workspace:^0.1.0",
-    "@nextui-org/react": "^2.2.9",
     "@react-hookz/web": "^24.0.2",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^5.17.7",
@@ -28,6 +28,7 @@
     "@trpc/client": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "date-fns": "^3.3.1",
     "framer-motion": "^10.18.0",
     "geist": "^1.2.0",
     "jotai": "^2.6.3",
