--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -6,19 +6,20 @@
   "exports": {
     ".": "./src/index.ts",
     "./button": "./src/button.tsx",
+    "./card": "./src/card.tsx",
+    "./checkbox": "./src/checkbox.tsx",
+    "./dialog": "./src/dialog.tsx",
     "./form": "./src/form.tsx",
     "./input": "./src/input.tsx",
     "./label": "./src/label.tsx",
+    "./progress": "./src/progress.tsx",
+    "./radio-group": "./src/radio-group.tsx",
+    "./scroll-area": "./src/scroll-area.tsx",
+    "./select": "./src/select.tsx",
+    "./textarea": "./src/textarea.tsx",
     "./theme": "./src/theme.tsx",
     "./toast": "./src/toast.tsx",
-    "./progress": "./src/progress.tsx",
-    "./textarea": "./src/textarea.tsx",
-    "./checkbox": "./src/checkbox.tsx",
-    "./radio-group": "./src/radio-group.tsx",
-    "./select": "./src/select.tsx",
-    "./card": "./src/card.tsx",
-    "./tooltip": "./src/tooltip.tsx",
-    "./scroll-area": "./src/scroll-area.tsx"
+    "./tooltip": "./src/tooltip.tsx"
   },
   "license": "MIT",
   "scripts": {
@@ -31,6 +32,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
