--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -11,8 +11,7 @@
     "lint": "dotenv -v SKIP_ENV_VALIDATION=1 next lint",
     "start": "pnpm with-env next start",
     "typecheck": "tsc --noEmit",
-    "with-env": "dotenv -e ../../.env --",
-    "dopper:sync-env": "doppler secrets download --no-file --format env > ../../.env.doppler"
+    "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
@@ -32,11 +31,17 @@
     "framer-motion": "^10.18.0",
     "geist": "^1.2.0",
     "jotai": "^2.6.3",
+    "konva": "^9.3.2",
     "lucide-react": "^0.312.0",
     "next": "^14.0.4",
     "react": "18.2.0",
+    "react-canvas": "^1.3.0",
     "react-dom": "18.2.0",
+    "react-konva": "^18.2.10",
+    "react-konva-utils": "^1.0.6",
+    "react-use": "^17.5.0",
     "superjson": "2.2.1",
+    "use-image": "^1.1.1",
     "usehooks-ts": "^2.9.5",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
