--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -8,13 +8,13 @@
   },
   "license": "MIT",
   "scripts": {
+    "with-env": "dotenv -e ../../.env --",
     "clean": "rm -rf .turbo node_modules",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint .",
     "generate": "drizzle-kit generate:sqlite --out ./migrations --breakpoints --schema=./src/schema/quest.ts --schema=./src/schema/auth.ts",
-    "push": "drizzle-kit push:sqlite",
-    "migrate": "tsx migrate",
-    "seed": "tsx seed",
+    "migrate": "pnpm with-env tsx migrate",
+    "seed": "pnpm with-env tsx seed",
     "studio": "drizzle-kit studio",
     "typecheck": "tsc --noEmit"
   },
