--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -39,6 +39,7 @@
     "react-dom": "18.2.0",
     "react-konva": "^18.2.10",
     "react-konva-utils": "^1.0.6",
+    "react-scroll": "^1.9.0",
     "react-use": "^17.5.0",
     "superjson": "2.2.1",
     "use-image": "^1.1.1",
@@ -54,6 +55,7 @@
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
+    "@types/react-scroll": "^1.8.10",
     "@types/uuid": "^9.0.8",
     "dotenv-cli": "^7.3.0",
     "eslint": "^8.56.0",
