--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -19,6 +19,7 @@
     "@peakquest/db": "workspace:^0.1.0",
     "@peakquest/ui": "workspace:^0.1.0",
     "@peakquest/validators": "workspace:^0.1.0",
+    "@peakquest/react-email": "workspace:^0.1.0",
     "@react-hookz/web": "^24.0.2",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^5.17.7",
@@ -41,6 +42,7 @@
     "react-konva-utils": "^1.0.6",
     "react-scroll": "^1.9.0",
     "react-use": "^17.5.0",
+    "resend": "^3.1.0",
     "superjson": "2.2.1",
     "use-image": "^1.1.1",
     "usehooks-ts": "^2.9.5",
