fix logic for checking if prev tasks are incomplete

--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -19,9 +19,9 @@
     "@nextui-org/react": "^2.2.9",
     "@peakquest/api": "workspace:^0.1.0",
     "@peakquest/db": "workspace:^0.1.0",
+    "@peakquest/email": "workspace:^0.1.0",
     "@peakquest/ui": "workspace:^0.1.0",
     "@peakquest/validators": "workspace:^0.1.0",
-    "@peakquest/email": "workspace:^0.1.0",
     "@react-hookz/web": "^24.0.2",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^5.17.7",
@@ -35,6 +35,7 @@
     "geist": "^1.2.0",
     "jotai": "^2.6.3",
     "konva": "^9.3.2",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.312.0",
     "next": "^14.0.4",
     "react": "18.2.0",
